--- a/frontend/src/styles/components/home/howItWorks.css
+++ b/frontend/src/styles/components/home/howItWorks.css
@@ -106,7 +106,6 @@
 
 .arrow-btn {
     cursor: pointer;
-    font-size: 5rem;
 }
 
 .arrow-btn svg {
